--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/DenseLisha/assignment">
+              <a href=" https://denselisha.github.io/assignment/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -648,7 +648,7 @@
             
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/DenseLisha/Drumkit">
+              <a href=" https://denselisha.github.io/Drumkit/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
